--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo \"No tests specified yet\" && exit 0",
+    "test:ci": "echo \"No tests specified yet\" && exit 0"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
